# k6-dashboard

./: .gitattributes  .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: main.yml
apps/dash-board/: app.py  build.gradle  pyproject.toml
apps/k6-report-ingress/: build.gradle
apps/k6-report-ingress/src/main/resources/config/: application-dev.yml  application.yml
apps/k6-report-ingress/src/main/resources/db/migration/: V20240209_1700__k6_tables.sql  V20240308_1600__processing_table.sql
apps/k6-report-ingress/src/test/resources/: report.json
apps/k6-report-ingress/src/test/resources/config/: application.yml
cli/: .gitignore  Cargo.toml  build.gradle
cli/src/: main.rs
dev/: docker-compose.yaml
dev/grafana/dashboards/: dashboard-test.json  dashboard.yml  grafana_dashboard_timescaledb.json  test-run-details.json  test-run-list.json
dev/grafana/datasources/: datasource.yml
dev/k6/: entrypoint.sh
gradle/wrapper/: gradle-wrapper.properties
openapi/: k6-dashboard.yml  k6-report-ingress.yml
src/main/java/io/github/bbortt/k6/dashboard/: Application.java
src/main/java/io/github/bbortt/k6/dashboard/configuration/: CorsConfiguration.java  JpaRepositoryConfiguration.java
src/main/java/io/github/bbortt/k6/dashboard/domain/: Sample.java  (+1 more)
src/main/resources/config/: application-dev.yml  application.yml
src/main/resources/db/migration/: V20240209_1700__k6_tables.sql
src/main/webapp/: package-lock.json  package.json
src/main/webapp/src/: App.js
src/test/k6/: script.js
src/test/resources/: report.json
(+33 files in other folders)
