[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.2"
openapi = { version = "1.0.0", path = "client" }
reqwest = { version = "0.11.25", features = ["multipart", "stream"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = "0.7.10"
futures = "0.3.30"
serde_json = "1.0.114"
